@@ -587,6 +587,8 @@ libwebkit2gtk_@WEBKITGTK_API_MAJOR_VERSION@_@WEBKITGTK_API_MINOR_VERSION@_la_SOU
 	Source/WebKit2/UIProcess/WebBackForwardList.h \
 	Source/WebKit2/UIProcess/WebContext.cpp \
 	Source/WebKit2/UIProcess/WebContext.h \
+	Source/WebKit2/UIProcess/WebContextConnectionClient.cpp \
+	Source/WebKit2/UIProcess/WebContextConnectionClient.h \
 	Source/WebKit2/UIProcess/WebContextInjectedBundleClient.cpp \
 	Source/WebKit2/UIProcess/WebContextInjectedBundleClient.h \
 	Source/WebKit2/UIProcess/WebContextMenuProxy.cpp \
